# jump

./: .gitignore  CHANGES.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.armv7l  README.md  RELEASE.md  build.rs  rust-toolchain  rustfmt.toml  tox.ini
.cargo/: cargo.toml  config.toml
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  release.yml
assets/resources/: scie-jump-icon-console.rc  scie-jump-icon-gui.rc
docs/: packaging.md
examples/: .gitignore  README.md  cat.fetch  common.sh  java.fetch  node.fetch  prepare.ps1  prepare.sh  python.fetch  run.sh
examples/busybox/: default-only-lift.linux-armv7l.json  default-only-lift.linux-powerpc64.json  default-only-lift.linux-riscv64.json  default-only-lift.linux-s390x.json  default-only-lift.linux-x86_64.json  lift.linux-armv7l.json  lift.linux-powerpc64.json  lift.linux-riscv64.json  lift.linux-s390x.json  lift.linux-x86_64.json  mixed-no-default-desc-lift.linux-armv7l.json  mixed-no-default-desc-lift.linux-powerpc64.json  mixed-no-default-desc-lift.linux-riscv64.json  mixed-no-default-desc-lift.linux-s390x.json  mixed-no-default-desc-lift.linux-x86_64.json  mixed-with-default-desc-lift.linux-armv7l.json  mixed-with-default-desc-lift.linux-powerpc64.json  mixed-with-default-desc-lift.linux-riscv64.json  mixed-with-default-desc-lift.linux-s390x.json  mixed-with-default-desc-lift.linux-x86_64.json  named-commands-only-no-desc-lift.linux-armv7l.json  named-commands-only-no-desc-lift.linux-powerpc64.json  named-commands-only-no-desc-lift.linux-riscv64.json  named-commands-only-no-desc-lift.linux-s390x.json  named-commands-only-no-desc-lift.linux-x86_64.json  named-commands-only-with-desc-lift.linux-armv7l.json  named-commands-only-with-desc-lift.linux-powerpc64.json  named-commands-only-with-desc-lift.linux-riscv64.json  named-commands-only-with-desc-lift.linux-s390x.json  named-commands-only-with-desc-lift.linux-x86_64.json  test.sh
examples/cat/: lift.linux-aarch64.json  lift.linux-x86_64.json  lift.macos-aarch64.json  lift.macos-x86_64.json  lift.windows-aarch64.json  lift.windows-x86_64.json  test.sh
examples/dotenv/: lift.linux-x86_64.json  lift.macos-aarch64.json  lift.windows-x86_64.json  test.sh
examples/java/: lift.linux-aarch64.json  lift.linux-x86_64.json  lift.macos-aarch64.json  lift.macos-x86_64.json  lift.windows-aarch64.json  lift.windows-x86_64.json  test.sh
examples/load/: alt-metadata.json  alt-metadata.linux-aarch64.json  alt-metadata.linux-x86_64.json  alt-metadata.macos-aarch64.json  alt-metadata.windows-x86_64.json  get.sh  lift.linux-aarch64.json  lift.linux-x86_64.json  lift.macos-aarch64.json  lift.macos-x86_64.json  lift.windows-aarch64.json  lift.windows-x86_64.json  test.sh
examples/node/: cowsay-lift.linux-aarch64.json  cowsay-lift.linux-x86_64.json  cowsay-lift.macos-aarch64.json  cowsay-lift.macos-x86_64.json  cowsay-lift.windows-aarch64.json  cowsay-lift.windows-x86_64.json  lift.linux-aarch64.json  lift.linux-x86_64.json  lift.macos-aarch64.json  lift.macos-x86_64.json  lift.windows-x86_64.json  test.sh
examples/ptex/: lift.linux-aarch64.json  lift.linux-x86_64.json  lift.macos-aarch64.json  lift.macos-x86_64.json  lift.windows-x86_64.json  test.sh
examples/python/: lift.linux-x86_64.json  lift.macos-x86_64.json  test.sh
jump/: Cargo.toml  README.md
jump/src/: archive.rs  atomic.rs  cmd_env.rs  comparable_regex.rs  config.rs  context.rs  fingerprint.rs  installer.rs  io.rs  jmp.rs  jump.rs  lib.rs  lift.rs  pack.rs  placeholders.rs  process.rs  zip.rs
package/: Cargo.toml  README.md  build.rs
package/src/: main.rs
placeholders/: Cargo.toml
placeholders/src/: lib.rs
src/: boot.rs  config.rs  extract.rs  installer.rs  jmp.rs  lib.rs  main.rs  zip.rs
src/boot/: pack.rs  split.rs
tools/: changelog.py
