[workspace]
members = [
  "package",
]

[package]
name = "scie-jump"
version = "0.1.5"
description = "The self contained interpreted executable launcher."
authors = [
  "John Sirois <john.sirois@gmail.com>",
]
edition = "2021"
publish = false

[profile.release]
opt-level = "s"
strip = "symbols"
lto = "thin"

# N.B.: The `package` psuedo-crate serves as a cross-platform build-step
# to post-process this root crate's binary by adding a 64 bit magic
# trailer to the binary that allows it to know its own size and know if
# it's being run as a stub or an application. This ensures when its
# binary dependency (this root crate) is built, it is size-optimized and
# has symbols stripped. The lto can't be applied to a build script, but
# that is properly plumbed to the root crate during a `-p package`
# build.
[profile.release.build-override]
opt-level = "s"
strip = "symbols"

[workspace.dependencies]
bstr = "1.0"
log = "0.4"
logging_timer = "1.1"
tempfile = "3.3"

[workspace.dependencies.zip]
version = "0.6"
default-features = false
# We specifically don't include "time" which is otherwise default. Without time, zip creation
# always uses 1/1/1980 and gives us reproducible zip creation by default.
# We also leave out non-standard forms of compression which net a ~40% increase in final binary
# size as of this commit (~1.4MB -> 2MB).
features = ["deflate"]

[dependencies]
bstr = { workspace = true }
env_logger = { version = "0.9", default-features = false }
jump = { path = "jump" }
log = { workspace = true }
logging_timer = { workspace = true }
nix = "0.25"
proc-exit = "2.0"
tempfile = { workspace = true }
zip = { workspace = true }