[workspace]
members = [
    "package",
]

[package]
name = "scie-jump"
version = "1.9.0"
description = "The self contained interpreted executable launcher."
authors = [
    "John Sirois <john.sirois@gmail.com>",
]
edition = "2024"
publish = false

[profile.release]
opt-level = "s"
strip = "symbols"
lto = "fat"
codegen-units = 1

[workspace.dependencies]
byteorder = "1.5"
env_logger = { version = "0.11", default-features = false }
log = "0.4"
logging_timer = "1.1"
tempfile = "3.23"

[workspace.dependencies.zip]
version = "6.0"
default-features = false
# We specifically don't include "time" which is otherwise default. Without time, zip creation
# always uses 1/1/1980 and gives us reproducible zip creation by default.
# We also leave out non-standard forms of compression which net a ~40% increase in final binary
# size as of this commit (~1.4MB -> 2MB).
features = ["deflate"]

[dependencies]
env_logger = { workspace = true }
jump = { path = "jump" }
log = { workspace = true }
logging_timer = { workspace = true }
nix = { version = "0.30" , features = ["process"] }
proc-exit = "2.0"
tempfile = { workspace = true }
zip = { workspace = true }
