[package]
name = "jump"
version = "0.14.0"
description = "The bulk of the scie-jump binary logic."
authors = [
    "John Sirois <john.sirois@gmail.com>",
]
edition = "2021"
publish = false

[dependencies]
bstr = { workspace = true }
byteorder = "1.4"
bzip2 = "0.4"
dirs = "4.0"
fd-lock = "3.0"
flate2 = "1.0"  # For gz support.
indexmap = { version = "1.9", features = ["serde"] }
itertools = "0.10"
log = { workspace = true }
logging_timer = { workspace = true }
memmap2 = "0.7"
os_str_bytes = { version = "6.6", features = ["conversions"] }
regex = { version = "1.9", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
structure = "0.1"
tar = "0.4"
tempfile = { workspace = true }
tuple = "0.5"
xz2 = { version = "0.1", features = ["static"] }
zip = { workspace = true }
zstd = "0.12"
walkdir = "2.3"

[dependencies.dotenvs]
git = "https://github.com/jsirois/dotenvs-rs"
rev = "b2276ef3fd039ed8565b4c1cbedb7a5aeeca734e"

[dev-dependencies]
ctor = "0.2"
env_logger = { workspace = true }
parking_lot = "0.12"
