[package]
name = "jump"
version = "0.14.0"
description = "The bulk of the scie-jump binary logic."
authors = [
    "John Sirois <john.sirois@gmail.com>",
]
edition = "2024"
publish = false

[dependencies]
byteorder = { workspace = true }
bzip2 = "0.6"
dirs = "6.0"
fd-lock = "4.0"
flate2 = "1.0"  # For gz support.
indexmap = { version = "2.8", features = ["serde"] }
itertools = "0.14"
log = { workspace = true }
logging_timer = { workspace = true }
os_str_bytes = { version = "7.1", features = ["conversions"] }
regex = { version = "1.11", default-features = false, features = ["std"] }
semver = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
structure = "0.1"
tar = "0.4"
tempfile = { workspace = true }
xz2 = { version = "0.1", features = ["static"] }
zip = { workspace = true }
zstd = "0.13"
walkdir = "2.3"

[dependencies.dotenvs]
git = "https://github.com/jsirois/dotenvs-rs"
rev = "b2276ef3fd039ed8565b4c1cbedb7a5aeeca734e"

[dev-dependencies]
ctor = "0.2"
env_logger = { workspace = true }
