[package]
name = "package"
version = "0.2.0"
description = "Packages the scie-jump binary into its final form."
authors = [
    "John Sirois <john.sirois@gmail.com>",
]
edition = "2021"
publish = false

[dependencies]
byteorder = "1.5"
clap = { version = "4.4", features = ["derive"] }
jump = { path = "../jump" }
proc-exit = "2.0"
sha2 = "0.10"
