[package]
name = "package"
version = "0.2.0"
description = "Packages the scie-jump binary into its final form."
authors = [
    "John Sirois <john.sirois@gmail.com>",
]
edition = "2024"
publish = false

[dependencies]
byteorder = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
jump = { path = "../jump" }
proc-exit = "2.0"
sha2 = "0.10"
which = "7.0.2"
