[package]
name = "package"
version = "0.2.0"
description = "Packages the scie-jump binary into its final form."
authors = [
    "John Sirois <john.sirois@gmail.com>",
]
edition = "2024"
publish = false

[dependencies]
byteorder = { workspace = true }
cargo_toml = "0.22"
clap = { version = "4.6", features = ["derive"] }
hex = { workspace = true }
jump = { path = "../jump" }
proc-exit = "2.0"
sha2 = { workspace = true }
which = "8.0.2"
